--- a/templates/trabajador/new.html.twig
+++ b/templates/trabajador/new.html.twig
@@ -36,6 +36,9 @@
                                         <div class="form-group m-b-20">
                                             {{ form_row(form.tipo_trabajador) }}
                                         </div>
+                                        <div class="form-group m-b-20">
+                                            {{ form_row(form.supervisor) }}
+                                        </div>
                                     </div>
                                     <!--<div class="form-group m-b-20">
                                         <label class="m-b-10">Property Type</label>
