cambio empresa por cadena

--- a/templates/base_left_menu.html.twig
+++ b/templates/base_left_menu.html.twig
@@ -18,10 +18,10 @@
                         </ul>
                     </li>
                     <li class="has_sub">
-                        <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-home-map-marker"></i><span> Empresa/Tienda </span> <span class="menu-arrow"></span></a>
+                        <a href="javascript:void(0);" class="waves-effect"><i class="mdi mdi-home-map-marker"></i><span> Cadena/Tienda </span> <span class="menu-arrow"></span></a>
                         <ul class="list-unstyled">
-                            <li><a href="{{ path('empresa_new') }}">Crear Empresa</a></li>
-                            <li><a href="{{ path('empresa_index') }}">Ver Empresa</a></li>
+                            <li><a href="{{ path('empresa_new') }}">Crear Cadena</a></li>
+                            <li><a href="{{ path('empresa_index') }}">Ver Cadena</a></li>
                             <li><a href="{{ path('tienda_new') }}">Crear Tienda</a></li>
                             <li><a href="{{ path('tienda_index') }}">Ver Tiendas</a></li>
                             <li><a href="{{ path('zona_new') }}">Crear Zona</a></li>
