--- a/templates/empresa/edit.html.twig
+++ b/templates/empresa/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_top_menu.html.twig' %}
 
-{% block title %}Edit Tienda{% endblock %}
+{% block title %}Edit Cadena{% endblock %}
 {% block stylesheets %}
         <link rel="shortcut icon" href="../assets/images/favicon.ico">
         <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css" />
@@ -27,7 +27,7 @@
     <div class="row">
             <div class="col-sm-12">
                 <div class="card-box table-responsive">
-                    <h4 class="m-t-0 header-title"><b>Tienda</b><a href="{{ path('empresa_index') }}"> Regresar a la lista</a></h4>
+                    <h4 class="m-t-0 header-title"><b>Cadena</b><a href="{{ path('empresa_index') }}"> Regresar a la lista</a></h4>
 
     {{ include('empresa/_form.html.twig', {'button_label': 'Actualizar'}) }}
 
