--- a/templates/empresa/new.html.twig
+++ b/templates/empresa/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_top_menu.html.twig' %}
 
-{% block title %}New Tienda{% endblock %} 
+{% block title %}New Cadena{% endblock %} 
 {% block stylesheets %}
 <!-- dropify css -->
 <link rel="stylesheet" type="text/css" href="../plugins/dropify/css/dropify.css" />
@@ -16,7 +16,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="card-box">
-                                <h4 class="header-title m-t-0">Crear Empresa</h4>
+                                <h4 class="header-title m-t-0">Crear Cadena</h4>
                                 {{ form_start(form) }}
                                 <div class="row">
                                     <div class="col-md-6">
