--- a/templates/empresa/show.html.twig
+++ b/templates/empresa/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_top_menu.html.twig' %}
 
-{% block title %}Tienda{% endblock %}
+{% block title %}Cadena{% endblock %}
 {% block stylesheets %}
 <link rel="shortcut icon" href="../assets/images/favicon.ico">
 <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.min.css" />
@@ -27,7 +27,7 @@
     <div class="row">
             <div class="col-sm-12">
                 <div class="card-box table-responsive">
-                    <h4 class="m-t-0 header-title"><b>Empresa</b><a href="{{ path('empresa_index') }}"> Regresar a la lista</a></h4>
+                    <h4 class="m-t-0 header-title"><b>Cadena</b><a href="{{ path('empresa_index') }}"> Regresar a la lista</a></h4>
                     <table id="datatable-buttons" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
             <tbody>
             <tr>
