--- a/templates/tienda/index.html.twig
+++ b/templates/tienda/index.html.twig
@@ -28,7 +28,7 @@
                         <thead>
             <tr>
                 <th>Id</th>
-                <th>Empresa</th>
+                <th>Cadena</th>
                 <th>Nombre</th>
                 <th>Direccion</th>
                 <th>Descripción</th>
