--- a/templates/empresa/index.html.twig
+++ b/templates/empresa/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base_top_menu.html.twig' %}
 
-{% block title %}Tienda index{% endblock %}
+{% block title %}Cadena index{% endblock %}
 {% block stylesheets %}
     <!-- DataTables -->
     <link href="../plugins/datatables/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
@@ -23,7 +23,7 @@
     <div class="row">
             <div class="col-sm-12">
                 <div class="card-box table-responsive">
-                    <h4 class="m-t-0 header-title"><b>Tienda</b></h4>
+                    <h4 class="m-t-0 header-title"><b>Cadena</b></h4>
                     <table id="datatable-buttons" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                         <thead>
             <tr>
