--- a/public/amcharts4/index.css
+++ b/public/amcharts4/index.css
@@ -5,7 +5,19 @@ body {
   margin: 0;
 }
 
-#chartdiv {
+#chartdivRipley {
+  width: 100%;
+  max-height: 600px;
+  height: 100vh;
+  max-height: 600px;
+}
+#chartdivParis {
+  width: 100%;
+  max-height: 600px;
+  height: 100vh;
+  max-height: 600px;
+}
+#chartdivJohnson {
   width: 100%;
   max-height: 600px;
   height: 100vh;
