carga de metas con fecha_i fecha_u

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -287,7 +287,7 @@
           range.label.disabled = false;
           range.label.fill = color;
           range.label.location = 0;
-          range.label.dx = -180;
+          range.label.dx = -130;
           range.label.dy = 6;
           range.label.fontWeight = "bold";
           range.label.fontSize = 12;
@@ -398,7 +398,7 @@
                   range.label.disabled = false;
                   range.label.fill = color;
                   range.label.location = 0;
-                  range.label.dx = -180;
+                  range.label.dx = -150;
                   range.label.dy = 6;
                   range.label.fontWeight = "bold";
                   range.label.fontSize = 12;
@@ -506,7 +506,7 @@
                       range.label.disabled = false;
                       range.label.fill = color;
                       range.label.location = 0;
-                      range.label.dx = -180;
+                      range.label.dx = -160;
                       range.label.dy = 6;
                       range.label.fontWeight = "bold";
                       range.label.fontSize = 12;
@@ -525,8 +525,8 @@
                     }
                     //addRange("Global", "Texas", "North Dakota", chart.colors.getIndex(0));
                     //addRange("Ripley", "Quilpue", "West Virginia", chart.colors.getIndex(1));
-                    addRange("Paris", "Paris Lyon", "South Carolina", chart.colors.getIndex(2));
-                    //addRange("Johnson", "Johnson Linares", "Wyoming", chart.colors.getIndex(3));
+                    //addRange("Paris", "Paris Lyon", "South Carolina", chart.colors.getIndex(2));
+                    addRange("Johnson", "Johnson Linares", "Wyoming", chart.colors.getIndex(3));
                     chart.cursor = new am4charts.XYCursor();
                     }); // end am4core.ready()
 //#################################################Johnson################################################################
